[workspace]
members = [
    "./xtask",
    "./rsexpr",
    "./lua-pattern",
    "./tree-sitter-wasm-build-tool",
    "./syntastica-core",
    "./syntastica-queries",
    "./syntastica-parsers",
    "./syntastica-parsers-git",
    "./syntastica-parsers-gitdep",
    "./syntastica-macros",
    "./syntastica-themes",
    "./syntastica-highlight",
    "./syntastica-js",
]

package.authors = ["RubixDev <silas.groh@t-online.de>"]
package.license = "GPL-3.0-only"
package.repository = "https://github.com/RubixDev/syntastica"

[workspace.metadata.release]
enable-all-features = true
sign-commit = true
sign-tag = true
shared-version = true

# optimize wasm for small code size
[profile.release-wasm]
inherits = "release"
opt-level = "s"
strip = true

[package]
name = "syntastica"
version = "0.3.0"
authors.workspace = true
edition = "2021"
keywords = ["tree-sitter", "syntect", "highlight", "parsing", "syntax"]
license.workspace = true
repository.workspace = true
description = "Modern and easy syntax highlighting using tree-sitter"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
#! ## Features
default = ["runtime-c"]

## Use the standard tree-sitter C runtime. See [WebAssembly support](#webassembly-support) for more information.
runtime-c = ["syntastica-core/runtime-c", "syntastica-highlight/runtime-c"]
## Use the pure Rust tree-sitter runtime. See [WebAssembly support](#webassembly-support) for more information.
runtime-c2rust = ["syntastica-core/runtime-c2rust", "syntastica-highlight/runtime-c2rust"]

## Provide implementations of serde's `Serialize` and `Deserialize` traits for [`Theme`](theme::Theme)
serde = ["syntastica-core/serde"]

## Enable this when building the docs
docs = ["dep:document-features", "dep:rustc_version"]

[dependencies]
aho-corasick = "1.0.1"
document-features = { version = "0.2.7", optional = true }
thiserror = "1.0.40"

syntastica-core = { version = "0.3.0", path = "syntastica-core", default-features = false }
syntastica-highlight = { version = "0.3.0", path = "syntastica-highlight", default-features = false }

[dev-dependencies]
once_cell = "1.17.1"
toml = "0.7.4"
tree-sitter = "0.20.10"

syntastica-macros = { version = "0.3.0", path = "./syntastica-macros" }
syntastica-parsers = { version = "0.3.0", path = "./syntastica-parsers", features = ["all"] }
syntastica-parsers-git = { version = "0.3.0", path = "./syntastica-parsers-git", features = ["all"] }
syntastica-queries = { version = "0.3.0", path = "./syntastica-queries" }
syntastica-themes = { version = "0.3.0", path = "./syntastica-themes" }

[build-dependencies]
rustc_version = { version = "0.4.0", optional = true }

[package.metadata.docs.rs]
all-features = true
