[package]
name = "lua-pattern"
version = "0.1.2"
authors.workspace = true
categories = ["parser-implementations"]
edition = "2021"
keywords = ["lua", "regex", "lua-pattern", "parser"]
license.workspace = true
repository.workspace = true
description = "Parser for Lua patterns and conversion to regular expressions"

[lints]
workspace = true

[features]
#! ## Features
default = []

## Provide [`try_to_regex`] for converting a parsed pattern to a regex
to-regex = []

## Meant to be enabled when building docs
docs = ["dep:document-features", "dep:rustc_version"]

[dependencies]
document-features = { workspace = true, optional = true }
thiserror.workspace = true

[build-dependencies]
rustc_version = { workspace = true, optional = true }

[package.metadata.docs.rs]
all-features = true

[package.metadata.release]
shared-version = false
release = false
