[package]
name = "rsexpr"
version = "0.2.2"
authors.workspace = true
categories = ["parser-implementations"]
edition = "2021"
keywords = ["s-expression", "sexp", "sexpr", "parser", "tree-sitter"]
license.workspace = true
repository.workspace = true
description = "Small and simple S-expression parsing and manipulation with support for square-bracketed groups and strings"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
#! ### Features
default = []

## Include comments in the parsed tree and pretty-printed output
comments = []

## Meant to be enabled when building docs
docs = ["dep:document-features", "dep:rustc_version"]

[dependencies]
document-features = { version = "0.2.7", optional = true }
thiserror = "1.0.40"

[build-dependencies]
rustc_version = { version = "0.4.0", optional = true }

[package.metadata.docs.rs]
all-features = true
