[package]
name = "syntastic-queries"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[features]
default = ["all"]

some = ["syntastic-parsers/some"]
most = ["some", "syntastic-parsers/most"]
all = ["most", "syntastic-parsers/all"]

[dependencies]
quote = "1.0.26"
tree-sitter = "0.20.10"

syntastic-parsers = { version = "0.1.0", path = "../syntastic-parsers", default-features = false, optional = true }
