[package]
name = "syntastica-highlight"
version = "0.1.0"
authors.workspace = true
edition = "2021"
license = "MIT"
repository.workspace = true
description = "Stripped-down and slightly modified fork of tree-sitter-highlight for use by syntastica"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.8.2"
thiserror = "1.0.40"
tree-sitter = "0.20.10"
