[package]
name = "syntastica-highlight"
version = "0.3.0"
authors.workspace = true
edition = "2021"
license = "MIT"
repository.workspace = true
description = "Stripped-down and slightly modified fork of tree-sitter-highlight for use by syntastica"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
#! ## Features
default = ["runtime-c"]

## Use the standard tree-sitter C runtime. See `syntastica`'s
## [WebAssembly support](https://rubixdev.github.io/syntastica/syntastica/#webassembly-support)
## for more information.
runtime-c = ["dep:tree-sitter"]
## Use the pure Rust tree-sitter runtime. See `syntastica`'s
## [WebAssembly support](https://rubixdev.github.io/syntastica/syntastica/#webassembly-support)
## for more information.
runtime-c2rust = ["dep:tree-sitter-c2rust"]

[dependencies]
ciborium = "0.2.1"
regex = "1.8.2"
serde = { version = "1.0.175", features = ["derive"] }
thiserror = "1.0.40"

tree-sitter = { version = "0.20.10", optional = true }
tree-sitter-c2rust = { version = "0.20.10", optional = true }
