[package]
name = "syntastica-highlight"
version.workspace = true
authors.workspace = true
documentation = "https://rubixdev.github.io/syntastica/syntastica_highlight/"
edition.workspace = true
license = "MIT"
repository.workspace = true
description = "Stripped-down and slightly modified fork of tree-sitter-highlight for use by syntastica"

[features]
#! ## Features
default = ["runtime-c"]

## Use the standard tree-sitter C runtime. See `syntastica`'s
## [WebAssembly support](https://rubixdev.github.io/syntastica/syntastica/#webassembly-support)
## for more information.
runtime-c = ["dep:tree-sitter"]
## Use the pure Rust tree-sitter runtime. See `syntastica`'s
## [WebAssembly support](https://rubixdev.github.io/syntastica/syntastica/#webassembly-support)
## for more information.
runtime-c2rust = ["dep:tree-sitter-c2rust"]

[dependencies]
tree-sitter = { workspace = true, optional = true }
tree-sitter-c2rust = { workspace = true, optional = true }

regex = "1.9.5"
thiserror.workspace = true
