[package]
name = "syntastica-js"
version.workspace = true
authors.workspace = true
documentation = "https://rubixdev.github.io/syntastica/syntastica_js/"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Use syntastica from JavaScript"

[dependencies]
syntastica.workspace = true
syntastica-parsers-git = { workspace = true, features = ["all"] }
syntastica-themes.workspace = true
