[package]
name = "syntastica-macros"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Macros for internal use in syntastica"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
once_cell.workspace = true
proc-macro2 = "1.0.58"
quote = "1.0.27"
quote-use = "0.7.1"
serde = { workspace = true, features = ["derive"] }
tft = { workspace = true, features = ["serde"] }
toml.workspace = true
