[package]
name = "syntastica-parsers-dynamic"
version = "0.3.0"
authors.workspace = true
edition = "2021"
license.workspace = true
repository.workspace = true
description = "Dynamically load tree-sitter parsers and queries at runtime for syntastica"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
#! ### Features
default = []

## Meant to be enabled when building docs
docs = ["dep:document-features", "dep:rustc_version"]

[dependencies]
anyhow = "1.0.71"
cc = "1.0.79"
dirs = "5.0.1"
document-features = { version = "0.2.7", optional = true }
libloading = "0.8.0"
once_cell = "1.18.0"
regex = "1.9.1"
serde = { version = "1.0.171", features = ["derive"] }
serde_json = "1.0.100"
syntastica-core = { version = "0.3.0", path = "../syntastica-core" }
tree-sitter = "0.20.10"
tree-sitter-loader = "0.20.0"
tree-sitter-tags = "0.20.2"

[build-dependencies]
rustc_version = { version = "0.4.0", optional = true }
