[package]
name = "syntastica-parsers-dynamic"
version.workspace = true
authors.workspace = true
documentation = "https://rubixdev.github.io/syntastica/syntastica_parsers_dynamic/"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Dynamically load tree-sitter parsers and queries at runtime for syntastica"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
#! ### Features
default = []

## Meant to be enabled when building docs
docs = ["dep:document-features", "dep:rustc_version"]

[dependencies]
syntastica-core = { workspace = true, features = ["runtime-c"] }

tree-sitter.workspace = true
tree-sitter-loader = "0.20.0"
tree-sitter-tags = "0.20.2"

anyhow = "1.0.71"
cc.workspace = true
dirs = "5.0.1"
document-features = { workspace = true, optional = true }
libloading = "0.8.0"
once_cell.workspace = true
regex = "1.9.1"
serde = { workspace = true, features = ["derive"] }
serde_json = "1.0.100"

[build-dependencies]
rustc_version = { workspace = true, optional = true }
