[package]
name = "syntastica-parsers-dynamic"
version.workspace = true
authors.workspace = true
documentation = "https://rubixdev.github.io/syntastica/syntastica_parsers_dynamic/"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Dynamically load tree-sitter parsers and queries at runtime for syntastica"

[features]
#! ### Features
default = []

## Meant to be enabled when building docs
docs = ["dep:document-features", "dep:rustc_version"]

[dependencies]
syntastica-core = { workspace = true, features = ["runtime-c"] }

tree-sitter.workspace = true
tree-sitter-loader = "0.25.2"
tree-sitter-tags = "0.25.2"

anyhow = "1.0.95"
cc.workspace = true
dirs = "6.0.0"
document-features = { workspace = true, optional = true }
libloading = "0.8.6"
once_cell.workspace = true
regex = "1.11.1"
serde = { workspace = true, features = ["derive"] }
serde_json = "1.0.138"

[build-dependencies]
rustc_version = { workspace = true, optional = true }
