[package]
name = "syntastica-parsers-git"
version = "0.1.0"
authors.workspace = true
edition = "2021"
license.workspace = true
repository.workspace = true
description = "Collection of tree-sitter queries for syntastica"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []

some = []
most = ["some"]
all = ["most"]

[dependencies]
syntastica = { version = "0.1.1", path = "..", default-features = false }
syntastica-macros = { version = "0.1.0", path = "../syntastica-macros" }

[build-dependencies]
cc = "1.0.79"
syntastica-macros = { version = "0.1.0", path = "../syntastica-macros" }
rustc_version = "0.4.0"

[package.metadata.docs.rs]
all-features = true
