[package]
name = "syntastica-parsers-git"
version = "0.3.0"
authors.workspace = true
edition = "2021"
license.workspace = true
repository.workspace = true
description = "Collection of tree-sitter parsers for syntastica, fetching with git in the build-script"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
#! ## Features
default = []

#! At least one of
#! <span class="stab portability"><code>some</code></span>,
#! <span class="stab portability"><code>most</code></span>, and
#! <span class="stab portability"><code>all</code></span>
#! must be enabled.

## Include parsers for the most widely known supported languages.
some = []
## Implies <span class="stab portability"><code>some</code></span>.
## Include parsers for most common languages.
most = ["some"]
## Implies <span class="stab portability"><code>most</code></span>.
## Include parsers for all supported languages.
all = ["most"]

## Meant to be enabled when building docs
docs = ["dep:document-features", "dep:rustc_version"]

[dependencies]
document-features = { version = "0.2.7", optional = true }
syntastica = { version = "0.3.0", path = "..", default-features = false }
syntastica-macros = { version = "0.3.0", path = "../syntastica-macros" }
syntastica-queries = { version = "0.3.0", path = "../syntastica-queries" }

[build-dependencies]
cc = "1.0.79"
syntastica-macros = { version = "0.3.0", path = "../syntastica-macros" }
rustc_version = { version = "0.4.0", optional = true }

[package.metadata.docs.rs]
all-features = true
