[package]
name = "syntastica-parsers"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["all"]

some = [
    "dep:tree-sitter-rust",
    "dep:tree-sitter-python",
]
most = [
    "some",
    "dep:tree-sitter-asm",
]
all = [
    "most",
    "dep:git2",
    "dep:cc",
]

[dependencies]
tree-sitter = "0.20.10"

tree-sitter-asm = { version = "0.1.0", optional = true }
tree-sitter-rust = { version = "0.20.3", optional = true }
tree-sitter-python = { version = "0.20.2", optional = true }

[build-dependencies]
git2 = { version = "0.17.0", optional = true }
cc = { version = "1.0.79", optional = true }
