[package]
name = "syntastica-parsers"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []

some = []
most = ["some"]
all = ["most"]

[dependencies]
syntastica-macros = { version = "0.1.0", path = "../syntastica-macros" }
tree-sitter = "0.20.10"

[build-dependencies]
cc = "1.0.79"
syntastica-macros = { version = "0.1.0", path = "../syntastica-macros" }
