[package]
name = "syntastica-queries"
version = "0.3.0"
authors.workspace = true
edition = "2021"
license.workspace = true
repository.workspace = true
description = "Collection of tree-sitter queries for syntastica"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[build-dependencies]
rustc_version = "0.4.0"

[package.metadata.docs.rs]
all-features = true
