[package]
name = "syntastica-queries"
version.workspace = true
authors.workspace = true
documentation = "https://rubixdev.github.io/syntastica/syntastica_queries/"
edition.workspace = true
include = ["LICENSE", "README.md", "src", "generated_queries"]
license.workspace = true
repository.workspace = true
description = "Collection of tree-sitter queries for syntastica"

[lints]
workspace = true

[dependencies]

[package.metadata.docs.rs]
all-features = true
