[package]
name = "syntastica-themes"
version = "0.3.0"
authors.workspace = true
edition = "2021"
license.workspace = true
repository.workspace = true
description = "A collection of themes for syntastica"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syntastica-core = { version = "0.3.0", path = "../syntastica-core" }
